--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "fastq": "^1.11.0",
     "mqtt": "^4.2.8",
-    "nodes7": "^0.3.18"
+    "nodes7": "^0.3.18",
+    "commander": "^11.1.0"
   }
 }
