--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fastq": "^1.11.0",
     "mqtt": "^4.2.8",
     "nodes7": "^0.3.18",
-    "commander": "^11.1.0"
+    "commander": "^11.1.0",
+    "yaml": "^2.3.4"
   }
 }
