--- a/config.example.json
+++ b/config.example.json
@@ -5,6 +5,7 @@
   "temperature_interval": 900000,
 
   "mqtt_base": "s7",
+  "mqtt_base_name": "plc_number1",
   "retain_messages": true,
 
   "discovery_prefix": "homeassistant",
