increased version number

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s7-mqtt-connector",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Connect Siemens S7 to Mqtt with Homeassistant discovery support",
   "keywords": [
     "mqtt",
@@ -8,7 +8,7 @@
     "siemens",
     "s7",
     "plc",
-    "mqtt-bridge"
+    "mqtt-bridge"addon-version
   ],
   "main": "index.js",
   "bin": {
