--- a/.github/workflows/create_relese.yaml
+++ b/.github/workflows/create_relese.yaml
@@ -47,26 +47,54 @@ jobs:
               "template": "#{{CHANGELOG}}",
               "categories": [
                 {
-                    "title": "## 🚀 Feature",
-                    "labels": ["feat", "feature"]
+                  "title": "## 🚀 Features",
+                  "labels": ["feat"]
                 },
                 {
-                    "title": "## 🐛 Fix",
-                    "labels": ["fix", "bug"]
+                  "title": "## 🛠 Fixes",
+                  "labels": ["fix", "bug"]
                 },
                 {
-                    "title": "## Other",
-                    "labels": []
+                  "title": "## 🧹 Maintenance",
+                  "labels": ["chore", "refactor", "cleanup"]
+                },
+                {
+                  "title": "## 📦 Build",
+                  "labels": ["build", "ci"]
+                },
+                {
+                  "title": "## 📝 Documentation",
+                  "labels": ["docs"]
+                },
+                {
+                  "title": "## ⚡️ Performance Improvements",
+                  "labels": ["perf"]
+                },
+                {
+                  "title": "## 🧪 Tests",
+                  "labels": ["test"]
+                },
+                {
+                  "title": "## ⏪ Reverts",
+                  "labels": ["revert"]
+                },
+                {
+                  "title": "## 🎨 Styling",
+                  "labels": ["style"]
+                },
+                {
+                  "title": "## 🎯 Other Changes",
+                  "labels": []
                 }
               ],
               "label_extractor": [
                 {
-                  "pattern": "^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\\([\\w\\-\\.]+\\))?(!)?: ([\\w ])+([\\s\\S]*)",
+                  "pattern": "^(build|chore|ci|docs|feat|fix|bug|perf|cleanup|refactor|revert|style|test){1}(\\([\\w\\-\\.]+\\))?(!)?: ([\\w ])+([\\s\\S]*)",
                   "target": "$1"
                 }
-              ]
+              ],
+              "pr_template": "- [#{{TITLE}}](${{ steps.get_repo_url.outputs.REPO_URL }}/commit/#{{MERGE_SHA}}) by @#{{AUTHOR}}"
             }
-  
 
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
